<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DialogReplace</class>
 <widget class="QDialog" name="DialogReplace">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>437</width>
    <height>277</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Replace/Find</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLabel" name="label">
       <property name="text">
        <string>S&amp;tring to Find:</string>
       </property>
       <property name="buddy">
        <cstring>textFind</cstring>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QLabel" name="label_2">
       <property name="text">
        <string>(use up arrow key to recall previous)</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QLineEdit" name="textFind">
     <property name="placeholderText">
      <string>Search</string>
     </property>
     <property name="clearButtonEnabled">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QLabel" name="label_3">
     <property name="text">
      <string>Replace &amp;With:</string>
     </property>
       <property name="buddy">
        <cstring>textReplace</cstring>
       </property>
    </widget>
   </item>
   <item>
    <widget class="QLineEdit" name="textReplace">
     <property name="placeholderText">
      <string>Replace</string>
     </property>
     <property name="clearButtonEnabled">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_2">
     <item>
      <widget class="QCheckBox" name="checkRegex">
       <property name="text">
        <string>&amp;Regular Expression</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QCheckBox" name="checkCase">
       <property name="text">
        <string>&amp;Case Sensitive</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QCheckBox" name="checkWord">
       <property name="text">
        <string>W&amp;hole Word</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_3">
     <item>
      <widget class="QCheckBox" name="checkBackward">
       <property name="text">
        <string>Search &amp;Backward</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_3">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QCheckBox" name="checkKeep">
       <property name="text">
        <string>&amp;Keep Dialog</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_5">
     <item>
      <spacer name="horizontalSpacer_7">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>Replace all in:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buttonWindow">
       <property name="text">
        <string>W&amp;indow</string>
       </property>
       <property name="icon">
        <iconset theme="window">
         <normaloff>.</normaloff>.</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buttonSelection">
       <property name="text">
        <string>&amp;Selection</string>
       </property>
       <property name="icon">
        <iconset theme="edit-select">
         <normaloff>.</normaloff>.</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buttonMulti">
       <property name="text">
        <string>&amp;Multiple Documents</string>
       </property>
       <property name="icon">
        <iconset theme="folder-documents">
         <normaloff>.</normaloff>.</iconset>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout_4">
     <item>
      <widget class="QPushButton" name="buttonReplace">
       <property name="text">
        <string>Replace</string>
       </property>
       <property name="icon">
        <iconset theme="edit-find-replace">
         <normaloff>.</normaloff>.</iconset>
       </property>
       <property name="shortcut">
        <string>Return</string>
       </property>
       <property name="default">
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buttonFind">
       <property name="text">
        <string>&amp;Find</string>
       </property>
       <property name="icon">
        <iconset theme="edit-find">
         <normaloff>.</normaloff>.</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buttonReplaceFind">
       <property name="text">
        <string>Replace &amp;&amp; Fi&amp;nd</string>
       </property>
       <property name="icon">
        <iconset theme="edit-find-replace">
         <normaloff>.</normaloff>.</iconset>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="buttonCancel">
       <property name="text">
        <string>Cancel</string>
       </property>
       <property name="icon">
        <iconset theme="dialog-cancel">
         <normaloff>.</normaloff>.</iconset>
       </property>
       <property name="shortcut">
        <string>Esc</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>0</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttonCancel</sender>
   <signal>clicked()</signal>
   <receiver>DialogReplace</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>382</x>
     <y>201</y>
    </hint>
    <hint type="destinationlabel">
     <x>348</x>
     <y>222</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
